--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "gatsby-transformer-sharp": "^2.1.19",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-media": "^1.9.2"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
